# maliit-framework

./: CMakeLists.txt
common/maliit/: namespace.h
connection/: mimserverconnection.h
input-context/: minputcontext.cpp  minputcontext.h
